[frontend/components] Make sure bottom bar doesn't cut off page content on mobile layout

--- a/Iceshrimp.Frontend/Layout/MainLayout.razor.css
+++ b/Iceshrimp.Frontend/Layout/MainLayout.razor.css
@@ -22,6 +22,9 @@
         display: none;
     }
 
+    .main {
+        margin-bottom: 5rem;
+    }
 }
 
 .top-bar {
